# Multi_Agent_Goal_Manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  urdfLinks.txt
.github/workflows/: main.yml  test_build.yml
backend/: autog_gen.py
backend/app/: LLMClient.py  __init__.py  chains.py  gpt.py  helpers.py  main.py
backend/app/cache/: redis.py
backend/app/cache/base/: backend.py
backend/app/configs/: auto_gen.py  config.py
backend/app/db/: mongo.py
backend/app/domain/: documents.py
backend/app/domain/base/: nosql.py
backend/app/schema/: __init__.py
backend/app/templates/: example_strings.py  reprompt_gpt.jinja2  summarizeEnviroment.jinja2  summarizeEnvironment.jinja2
backend/tests/: conftest.py  sample_json.py  test_chatgpt_manager.py  test_client_endpoints.py  test_endpoint_logic.py  test_endpoints.py  test_fast_api.py  test_redis.py
controllers/ipr_cube/: ipr_cube
controllers/ipr_cube_python/: IKpy_quickStart.py  IprHd6m180.urdf  ipr_cube_python.py
controllers/ipr_cube_python/json/: robot_capability.py
controllers/ipr_cube_python/libraries/: api_client.py  helpers.py  ikpy_wrapper.py  ipr.py  robot_controller_manager.py
controllers/target_coordinates/: target_coordinates
libraries/ipr/: IPR.cpp  libipr.dylib
shared/: models.py  rabbitmq_manager.py  taskHandler.py
worlds/: .ipr_cube.wbproj  ipr_cube.wbt
