[project]
name = "ipr_worlds"
version = "0.1.0"
description = "dependencies for robot arm project"
authors = [
    {name = "amin mahjoub"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "autogen (>=0.7.0,<0.8.0)",
    "ikpy (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "opik (>=1.3.4,<2.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

